<resources>
    <string name="icon_text_a">a</string>
    <string name="icon_text_b">b</string>
    <string name="icon_text_hash">#</string>
    <string name="icon_text_c">c</string>
    <string name="icon_text_d">d</string>
    <string name="icon_text_e">e</string>
    <string name="icon_text_f">f</string>
    <string name="icon_text_g">g</string>
    <string name="icon_text_h">h</string>
    <string name="icon_text_i">i</string>
    <string name="icon_text_j">j</string>
    <string name="icon_text_k">k</string>
    <string name="icon_text_l">l</string>
    <string name="icon_text_m">m</string>
    <string name="icon_text_n">n</string>
    <string name="icon_text_o">o</string>
    <string name="icon_text_p">p</string>
    <string name="icon_text_q">q</string>
    <string name="icon_text_r">r</string>
    <string name="icon_text_s">s</string>
    <string name="icon_text_t">t</string>
    <string name="icon_text_u">u</string>
    <string name="icon_text_v">v</string>
    <string name="icon_text_w">w</string>
    <string name="icon_text_x">x</string>
    <string name="icon_text_y">y</string>
    <string name="icon_text_z">z</string>
    <string name="icon_text_A">A</string>
    <string name="icon_text_B">B</string>
    <string name="icon_text_C">C</string>
    <string name="icon_text_D">D</string>
    <string name="icon_text_E">E</string>
    <string name="icon_text_F">F</string>
    <string name="icon_text_G">G</string>
    <string name="icon_text_H">H</string>
    <string name="icon_text_I">I</string>
    <string name="icon_text_J">J</string>
    <string name="icon_text_K">K</string>
    <string name="icon_text_L">L</string>
    <string name="icon_text_M">M</string>
    <string name="icon_text_N">N</string>
    <string name="icon_text_O">O</string>
    <string name="icon_text_P">P</string>
    <string name="icon_text_Q">Q</string>
    <string name="icon_text_R">R</string>
    <string name="icon_text_S">S</string>
    <string name="icon_text_T">T</string>
    <string name="icon_text_U">U</string>
    <string name="icon_text_V">V</string>
    <string name="icon_text_W">W</string>
    <string name="icon_text_X">X</string>
    <string name="icon_text_Y">Y</string>
    <string name="icon_text_Z">Z</string>
    <string name="icon_text_0">0</string>
    <string name="icon_text_1">1</string>
    <string name="icon_text_2">2</string>
    <string name="icon_text_3">3</string>
    <string name="icon_text_7">7</string>
    <string name="icon_text_search">#</string>
    <string name="icon_text_unFav">$</string>
    <string name="icon_text_fav">%</string>
    <string name="icon_text_enquiry">&amp;</string>
    <string name="icon_text_childern">\'</string>
    <string name="icon_text_call">(</string>
    <string name="icon_text_filter">,</string>
    <string name="icon_text_weather">]</string>
    <string name="icon_text_visa">^</string>
    <string name="icon_text_policy">_</string>
    <string name="icon_text_package">`</string>
    <string name="icon_text_mytrips">{</string>
    <string name="icon_text_mydocuments">|</string>
    <string name="icon_text_flight_tracker">}</string>
    <string name="icon_text_flight_checkin">~</string>
    <string name="icon_text_currency_converter">\\</string>
    <string name="icon_text_baggage_info">&#xe000;</string>
    <string name="icon_text_dollor_icon">&#xe001;</string>
    <string name="icon_text_info">.</string>
    <string name="icon_text_cruise">&#xe003;</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="seventeen">17</string>
    <string name="return_msg">Book Round Trips for great savings!</string>
    <string name="rupee_symbol">AUD </string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="confirm_logout">Sure you want to logout?</string>
    <string name="title_activity_flights_search">FlightsSearchActivity</string>
    <string name="max_passenger">You have reached maximum passenger limit.</string>
    <string name="upto_max_passenger">Upto 9 passengers can be booked at a time.</string>
    <string name="max_infants">Number of infants can\'t exceed number of adults.</string>
    <string name="search_city">Enter Departure City</string>
    <string name="search_passenger">Enter Passenger Name</string>
    <string name="getStart_text">Get Started</string>
    <string name="forgot_password_text">Forgot Password ?</string>
    <string name="travel_class_title">Travel Class</string>
    <string name="username">Email Id</string>
    <string name="password">Password</string>
    <string name="sign_text">Sign Up</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="economy_class_text">ECONOMY </string>
    <string name="premium_economy_text">PREMIUM ECONOMY</string>
    <string name="business_class_text">BUSINESS</string>
    <string name="travellers_text">TRAVELLERS</string>
    <string name="first_class_text">FIRST </string>
    <string name="minus_text">-</string>
    <string name="plus_text">+</string>
    <string name="adult_text">ADULT</string>
    <string name="adults_text">ADULTS</string>
    <string name="year_12_above_text">12 years and above</string>
    <string name="year_2_to_12_above_text">2 to 12 years old</string>
    <string name="less_2_years_text">Less than 2 years</string>
    <string name="childs_text">CHILDREN</string>
    <string name="infants_text">INFANTS</string>
    <string name="ok_text">OK</string>
    <string name="from_text">FROM</string>
    <string name="to_text">TO</string>
    <string name="test_from_text">Test From Place Name</string>
    <string name="test_to_text">Test To Place Name</string>
    <string name="test_from_airport_text">Test From Airport Name</string>
    <string name="test_to_airport_text">Test To Airport Name</string>
    <string name="departure_text">DEPARTURE</string>
    <string name="departure_month_text">NOV</string>
    <string name="return_month_text">NOV</string>
    <string name="departure_day_text">TOMORROW</string>
    <string name="return_day_text">TOMORROW</string>
    <string name="return_text">RETURN</string>
    <string name="search_text">SEARCH</string>
    <string name="network_error">Please check your Internet connection and try again</string>
    <string name="main_header_title_text">Rezofy</string>
    <string name="blank_username">Please Enter Email Id</string>
    <string name="blank_password">Please Enter Password</string>
    <string name="invalid_mail">Please Enter Valid Email Id</string>
    <string name="flights_text">Flights</string>
    <string name="packages_txt">Packages</string>
    <string name="continue_text">Continue</string>
    <string name="header_title_text">Test</string>
    <string name="state_name_text">New Delhi,</string>
    <string name="country_name_text">New Delhi</string>
    <string name="airport_text">DEL -</string>
    <string name="airport_name_text">Indira Gandhi international Airport</string>
    <string name="viewpager_text">Polynesia French Island</string>
    <string name="view_pager_first_image_text">Polynesia French Island1</string>
    <string name="view_pager_second_image_text">Polynesia French Island2</string>
    <string name="view_pager_third_image_text">Polynesia French Island3</string>
    <string name="true_string">true</string>
    <string name="book">BOOK</string>
    <string name="time">Time</string>
    <string name="price">Price</string>
    <string name="departure_text_oneway">Departure</string>
    <string name="duretion_text">Duration</string>
    <string name="please_wait">Please wait…</string>
    <string name="select_date">Select Dates</string>
    <string name="all_airlines_text">All airlines</string>
    <string name="memory_full">Internal Memory Full</string>
    <string name="gds_airlines_text">GDS</string>
    <string name="passenger_1">Passenger #1</string>
    <string name="passenger_no_text">Passenger #</string>
    <string name="adult_small_text">Adult</string>
    <string name="child_small_text">Child</string>
    <string name="infant_small_text">Infant</string>
    <string name="first_name">First Name (middle name if any)</string>
    <string name="last_name">Last Name</string>
    <string name="type">Type</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender_string">Gender</string>
    <string name="residence_string">Country of Residence</string>
    <string name="passport_no">Passport Number</string>
    <string name="pp_issued_by_string">Passport issued by</string>
    <string name="pp_exp_date_string">Passport Expiration Date</string>
    <string name="money">\u20B9 7,596</string>
    <string name="next_pass">NEXT PASSENGER</string>
    <string name="previous_pass">PREVIOUS PASSENGER</string>
    <string name="passenger_text">Passenger</string>
    <string name="spinner_title">Title</string>
    <string name="today_text">TODAY</string>
    <string name="tomorrow_text">TOMORROW</string>
    <string name="payment_header_title_text">Payment</string>
    <string name="text_small_adult">Adult</string>
    <string name="text_small_adults">Adults</string>
    <string name="text_small_child">Child</string>
    <string name="text_small_children">Children</string>
    <string name="text_small_infant">Infant</string>
    <string name="text_small_infants">Infants</string>
    <string name="fare_info">Fare Information</string>
    <string name="flight_text">Flight Details</string>
    <string name="header_review_text">Review and Payment</string>
    <string name="email_id">Email id</string>
    <string name="hint_mobile">Mobile</string>
    <string name="term_text"><u>Terms and Conditions</u></string>
    <string name="recent_search">Recent Searches</string>
    <string name="msg_cancellation_request_received">Your cancellation request has been received</string>
    <string name="msg_cancellation_failure">Please call portal support team to confirm the cancellation request</string>
    <string name="contact_info">Contact Information</string>
    <string name="ticket_and_flight">Your ticket and flight info will be sent here</string>
    <string name="email">Email</string>
    <string name="plus_91">+91</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="billing_info">Billing Information</string>
    <string name="same_as_my_pro">Same as my profile</string>
    <string name="bill_name">Billing Name</string>
    <string name="address_name">Address</string>
    <string name="city_name">City</string>
    <string name="country_name">Country</string>
    <string name="state_name">State</string>
    <string name="pincode">Pincode</string>
    <string name="send_sms_email">Send sms/email information to traveller</string>
    <string name="fare_break">Fare Break-Up</string>
    <string name="basic_fare">Basic Fare</string>
    <string name="adult_one">Adult(1)</string>
    <string name="rupee">\u20B9,762</string>
    <string name="surcharges">Surcharges</string>
    <string name="cute_fee">CUTE Fee</string>
    <string name="airport_development">Airport Development Fee</string>
    <string name="passenger_service">Passenger Service Fee</string>
    <string name="service_tax">Service Tax</string>
    <string name="discount_value">Discount</string>
    <string name="my_trip">My Trip</string>
    <string name="my_balance">My Balance</string>
    <string name="contact_us">Contact Us</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="total_tax">Total Tax</string>
    <string name="netPayable">Net Payable</string>
    <string name="filter">Filter</string>
    <string name="any">Any</string>
    <string name="price_range">Price Range</string>
</resources>