<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/inbox"
            android:checked="false"

            android:title="@string/my_trip" />

        <item
            android:id="@+id/my_balance"
            android:checked="false"
            android:title="@string/my_balance" >
         </item>

        <item
            android:id="@+id/sent_mail"
            android:checked="false"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/drafts"
            android:checked="false"
            android:title="@string/setting" />


        <item
            android:id="@+id/allmail"
            android:checked="false"
            android:title="@string/logout" />


    </group>
</menu>