<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/row_placesearch_selector"
    android:padding="5dp">


    <com.rezofy.views.custom_views.IconTextView
        android:id="@+id/it_flight_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="5dp"
        android:singleLine="true"
        android:text="@string/icon_text_o"
        android:textColor="@color/airport_color"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/state_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_toRightOf="@+id/it_flight_icon"
        android:text="@string/state_name_text"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/country_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/state_name"
        android:text="@string/country_name_text"
        android:textColor="@color/country_color" />


    <TextView
        android:id="@+id/airport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/state_name"
        android:layout_below="@+id/state_name"
        android:text="@string/airport_text"
        android:textColor="@color/airport_color" />

    <TextView
        android:id="@+id/airport_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/airport"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/airport"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/airport_name_text"
        android:textColor="@color/airport_color" />
</RelativeLayout>