<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/travel_class_title"
        android:textColor="@color/black" />

    <com.rezofy.views.custom_views.IconTextView
        android:id="@+id/tvtravelicon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvtitle"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/icon_text_a"
        android:textColor="@color/grey_first"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/tvunderline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tvtravelicon"
        android:layout_marginTop="10dp"
        android:background="@color/grey_second"
        android:gravity="center" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/dialogselector"
        android:layout_below="@+id/tvunderline"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/economy_class_text"
        android:textColor="@color/grey_second"

        />

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/dialogselector"
        android:layout_below="@+id/text"
        android:gravity="center"
        android:text="@string/premium_economy_text"
        android:textColor="@color/grey_second" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/dialogselector"
        android:layout_below="@+id/text1"
        android:gravity="center"
        android:text="@string/business_class_text"
        android:textColor="@color/grey_second" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/dialogselector"
        android:layout_below="@+id/text2"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/first_class_text"
        android:textColor="@color/grey_second" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/text3"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:background="@color/black"
        />
</RelativeLayout>
