<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/travellers_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/travellers_text"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/travellers_icons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_first" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/adult_decrement"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/dialogselector"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/minus_text"
            android:textColor="@color/grey_second"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/adult_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/one"
            android:textColor="@color/blue_first"
            android:textSize="30sp" />


        <TextView
            android:id="@+id/adult_increment"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/dialogselector"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/plus_text"
            android:textColor="@color/grey_second"
            android:textSize="25sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/adult_text"
        android:textColor="@color/grey_second"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/year_12_above_text"
        android:textColor="@color/grey_second"
        android:textSize="12sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/children_decrement"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/dialogselector"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/minus_text"
            android:textColor="@color/grey_second"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/children_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/zero"
            android:textColor="@color/blue_first"
            android:textSize="30sp" />


        <TextView
            android:id="@+id/children_increment"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/dialogselector"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/plus_text"
            android:textColor="@color/grey_second"
            android:textSize="25sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/childs_text"
        android:textColor="@color/grey_second"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/year_2_to_12_above_text"
        android:textColor="@color/grey_second"
        android:textSize="12sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/infant_decrement"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/dialogselector"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/minus_text"
            android:textColor="@color/grey_second"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/infant_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/zero"
            android:textColor="@color/blue_first"
            android:textSize="30sp" />


        <TextView
            android:id="@+id/infant_increment"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/dialogselector"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/plus_text"
            android:textColor="@color/grey_second"
            android:textSize="25sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_infants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/infants_text"
        android:textColor="@color/grey_second"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_infants_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/less_2_years_text"
        android:textColor="@color/grey_second"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_first" />

    <TextView
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/ok_text"
        android:textColor="@color/red_first"
        android:textSize="16sp" />


</LinearLayout>