<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E6000000"
        android:orientation="vertical"
        >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        android:padding="@dimen/padding_10">

        <com.rezofy.views.custom_views.IconTextView
            android:id="@+id/tvFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="d"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_16"
            android:text="@string/fare_break"
            android:textSize="20dp" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="80"
            android:background="@color/white"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_line"
                android:paddingLeft="@dimen/padding_16">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="80"
                    android:text="@string/basic_fare"
                    android:textColor="@color/black" />


                <TextView
                    android:id="@+id/tvBaseFare"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:gravity="right"
                    android:text="@string/rupee"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_taxes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_16"
                    android:paddingTop="@dimen/padding_10"
                    android:text="@string/surcharges"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_10"
                android:paddingLeft="@dimen/padding_16"
                android:paddingRight="@dimen/padding_10"
                android:paddingTop="@dimen/padding_10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="80"
                    android:text="@string/total_tax"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvTotalTaxes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:gravity="right"
                    android:text="-"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_10"
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_10"
            android:paddingTop="@dimen/padding_10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="80"
                android:text="@string/netPayable"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvNetpayble"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:gravity="right"
                android:text="@string/rupee"
                android:textColor="@color/black" />

        </LinearLayout>


        </LinearLayout>

    </ScrollView>

    </LinearLayout>

    <com.rezofy.utils.RoundedImageView
        android:id="@+id/btn_flaoting"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="bottom|start"
        android:background="@drawable/chat_img"
        android:scaleType="fitXY"
        />


</FrameLayout>